# flask-simple-api

./: Procfile  pyproject.toml  simple.py
app/: main.py  manage.py
app/router/: calc.py  health.py
